--- a/models/01_sources/src_sales.yml
+++ b/models/01_sources/src_sales.yml
@@ -21,3 +21,7 @@ sources:
           "Cross-reference table mapping people to their credit card information in the CreditCard table."
       - name: customer
         description: "Current customer information. Also see the Person and Store tables."
+      - name: store
+        description: "Customers (resellers) of Adventure Works products."
+      - name: salesperson
+        description: "Sales representative current information."
