--- a/models/04_marts/dim_cartaocredito.yml
+++ b/models/04_marts/dim_cartaocredito.yml
@@ -12,16 +12,17 @@ models:
       - name: id_cartao_credito
         description: "Chave única do cartão de crédito, original da tabela."
         tests:
+          - unique
           - not_null
       - name: nm_cartao_credito
         description: "Nome do cartão de crédito, podendo ser Vista, Distinguish, SuperiorCard ou ColonialVoice."
         tests:
           - not_null
-      - name: num_cartao
-        description: "Número do cartão de crédito."
-      - name: mes_expiracao
-        description: "Mês de expiração do cartão de crédito." 
-      - name: ano_expiracao
-        description: "Ano de expiração do cartão de crédito." 
-      - name: dt_modificacao
-        description: "Data em que o registro foi modificado."               
+      # - name: num_cartao
+      #   description: "Número do cartão de crédito."
+      # - name: mes_expiracao
+      #   description: "Mês de expiração do cartão de crédito." 
+      # - name: ano_expiracao
+      #   description: "Ano de expiração do cartão de crédito." 
+      # - name: dt_modificacao
+      #   description: "Data em que o registro foi modificado."               
