--- a/models/04_marts/dim_cliente.yml
+++ b/models/04_marts/dim_cliente.yml
@@ -5,15 +5,22 @@ models:
     description: "Esta tabela reune informações sobre os clientes. Vem das fontes de src_sales e scr_person."
     columns:
       - name: sk_cliente
-        description: "Chave SK gerada para identificador único da tabela com base nas colunas id_cliente, nm_pessoa."
+        description: "Chave SK gerada para identificador único da tabela com base nas colunas id_cliente, id_entidade_negocio e nm_completo."
         tests:
           - unique
           - not_null
       - name: id_cliente
         description: "Chave única do cliente, original da tabela."
+        tests:
+          - unique
+          - not_null       
+      - name: id_entidade_negocio
+        description: "Chave para todos os clientes, fornecedores e funcionários." 
+        tests:
+          - unique
       - name: tipo_pessoa
         description: >
-          "Tipo principal de pessoa: Contato da loja, Pessoa Físia (varejo), Vendedor, Funcionário (não vendas), Contato do fornecedor ou Contato geral."
+          "Tipo principal de pessoa: Contato da loja, Pessoa Física (varejo), Vendedor, Funcionário (não vendas), Contato do fornecedor ou Contato geral."
       - name: nm_pessoa
         description: "Primeiro nome do cliente."
       - name: nm_meio
@@ -21,7 +28,7 @@ models:
       - name: nm_ultimo
         description: "último nome do cliente." 
       - name: nm_completo
-        description: "Nome completo do cliente."               
+        description: "Nome completo do cliente. Pode vir nulo pois o cliente não é obrigado a passar dados pessoais no momento da compra."             
       - name: emailpromotion
         description: >
           "Flag que indica: 0 = O contato não deseja receber promoções por e-mail, 1 = O contato deseja receber promoções por e-mail da AdventureWorks, 
