--- a/models/04_marts/dim_cartaocredito.yml
+++ b/models/04_marts/dim_cartaocredito.yml
@@ -18,11 +18,5 @@ models:
         description: "Nome do cartão de crédito, podendo ser Vista, Distinguish, SuperiorCard ou ColonialVoice."
         tests:
           - not_null
-      # - name: num_cartao
-      #   description: "Número do cartão de crédito."
-      # - name: mes_expiracao
-      #   description: "Mês de expiração do cartão de crédito." 
-      # - name: ano_expiracao
-      #   description: "Ano de expiração do cartão de crédito." 
-      # - name: dt_modificacao
-      #   description: "Data em que o registro foi modificado."               
+      - name: id_entidade_negocio
+        description: "Chave para todos os clientes, fornecedores e funcionários."          
